--- a/src/main/resources/Message.fxml
+++ b/src/main/resources/Message.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.image.ImageView?>
 <VBox prefHeight="481.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MessageController">
    <ButtonBar prefHeight="40.0" prefWidth="200.0">
       <buttons>
@@ -26,4 +27,6 @@
         <Button fx:id="sendButton" text="Envoyer" />
     </HBox>
    <Label fx:id="error" prefHeight="17.0" prefWidth="674.0" textFill="#e10909" />
+    <ImageView fx:id="imageView" />
+
 </VBox>
