--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -24,7 +25,11 @@
      <TextField fx:id="matriculeField" layoutX="224.0" layoutY="276.0" promptText="Matricule" />
      <Button fx:id="ajouterButton" layoutX="207.0" layoutY="325.0" onAction="#handleAjouterButton" prefHeight="25.0" prefWidth="72.0" text="Ajouter" />
      <Button fx:id="supprimerButton" disable="true" layoutX="318.0" layoutY="325.0" onAction="#handleSupprimerButton" text="Supprimer" />
-      <Label layoutX="112.0" layoutY="128.0" prefHeight="20.0" prefWidth="91.0" text="Marque :" textFill="WHITE">
+        <ProgressBar fx:id="progressBar" layoutX="499.0" layoutY="203.0" prefHeight="18.0" prefWidth="185.0" />
+
+        <ImageView fx:id="qrCodeImageView" fitHeight="200" fitWidth="200" layoutX="224.0" layoutY="360.0" />
+
+        <Label layoutX="112.0" layoutY="128.0" prefHeight="20.0" prefWidth="91.0" text="Marque :" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
