--- a/gest/src/main/resources/showcaseUser.fxml
+++ b/gest/src/main/resources/showcaseUser.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controllers.showcaseUser">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.showcaseUser">
     <children>
       <ImageView fitHeight="758.0" fitWidth="811.0" pickOnBounds="true" preserveRatio="true">
          <image>
