--- a/src/main/resources/AfficherEvent.fxml
+++ b/src/main/resources/AfficherEvent.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -15,13 +18,19 @@
                 <Image url="@image/ListeEvent.png" /> <!-- Assurez-vous d'avoir l'image correcte et le chemin correct -->
             </image>
         </ImageView>
-        <ListView fx:id="listeEvents" layoutX="274.0" layoutY="154.0" prefHeight="320.0" prefWidth="459.0" />
+        <ListView fx:id="listeEvents" layoutX="274.0" layoutY="168.0" prefHeight="320.0" prefWidth="459.0" />
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" /> <!-- Vous pouvez ajouter d'autres éléments ici si nécessaire -->
         <Button fx:id="boutonGerer" blendMode="HARD_LIGHT" layoutX="288.0" layoutY="501.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="147.0" text="Gerer les évènements" />
         <Button fx:id="boutonGererEspace" layoutX="59.0" layoutY="103.0" mnemonicParsing="false" onAction="#ouvrirAjouterEspace" opacity="0.0" prefHeight="35.0" prefWidth="110.0" text="Gerer les espaces " />
-        <TextField fx:id="txtRechercheNom" layoutX="504.0" layoutY="120.0" prefHeight="26.0" prefWidth="138.0" promptText="Rechercher par nom" />
-        <Button layoutX="646.0" layoutY="121.0" onAction="#rechercherParNom" prefHeight="26.0" prefWidth="80.0" text="Rechercher" />
-        <Button layoutX="274.0" layoutY="121.0" onAction="#trierParNom" text="Trier par nom" />
+        <TextField fx:id="txtRechercheNom" layoutX="598.0" layoutY="120.0" prefHeight="26.0" prefWidth="129.0" promptText="Rechercher un event" />
+        <ChoiceBox fx:id="triChoiceBox" layoutX="274.0" layoutY="120.0" prefHeight="26.0" prefWidth="103.0">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="Nom" />
+                    <String fx:value="Date" />
+                </FXCollections>
+            </items>
+        </ChoiceBox>
 
     </children>
 </AnchorPane>
