--- a/src/main/resources/stats.fxml
+++ b/src/main/resources/stats.fxml
@@ -13,14 +13,15 @@
 
 <AnchorPane prefHeight="535.0" prefWidth="802.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StatisticsController">
     <!-- Header -->
-    <Label layoutX="225.0" layoutY="14.0" text="Statistiques des espaces">
+    <Label blendMode="HARD_LIGHT" layoutX="251.0" layoutY="14.0" prefHeight="27.0" prefWidth="238.0" text="Statistiques des espaces">
         <font>
-            <Font size="18.0" />
+            <Font name="System Bold Italic" size="18.0" />
         </font>
     </Label>
 
     <!-- Bar Chart -->
-    <BarChart fx:id="reservationChart" layoutX="14.0" layoutY="53.0" prefHeight="200.0" prefWidth="572.0">
+
+    <BarChart fx:id="barChart" layoutX="14.0" layoutY="53.0" prefHeight="200.0" prefWidth="711.0">
         <xAxis>
             <CategoryAxis fx:id="monthAxis" label="Espace" side="BOTTOM" />
         </xAxis>
@@ -29,21 +30,17 @@
         </yAxis>
     </BarChart>
 
+
     <!-- Pie Chart -->
-    <PieChart fx:id="pieChart" layoutX="14.0" layoutY="269.0" prefHeight="200.0" prefWidth="200.0" />
+    <PieChart fx:id="pieChart" layoutX="413.0" layoutY="237.0" prefHeight="286.0" prefWidth="318.0" />
 
     <!-- Table View -->
-    <TableView fx:id="tableView" layoutX="403.0" layoutY="268.0" prefHeight="190.0" prefWidth="366.0">
+    <TableView fx:id="tableView" layoutX="86.0" layoutY="285.0" prefHeight="190.0" prefWidth="200.0">
         <!-- Define columns -->
         <columns>
-            <TableColumn fx:id="spaceColumn" text="Espace">
+            <TableColumn fx:id="spaceColumn" prefWidth="196.80003356933594" text="Espace">
                 <cellValueFactory>
                     <PropertyValueFactory property="name" />
-                </cellValueFactory>
-            </TableColumn>
-            <TableColumn fx:id="countColumn" text="Capacité">
-                <cellValueFactory>
-                    <PropertyValueFactory property="capacite" />
                 </cellValueFactory>
             </TableColumn>
         </columns>
