--- a/src/main/resources/ListeDiscussion.fxml
+++ b/src/main/resources/ListeDiscussion.fxml
@@ -3,12 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox styleClass="back" prefHeight="513.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ListeDiscussion">
+<VBox prefHeight="513.0" prefWidth="614.0" styleClass="back" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ListeDiscussion">
    <children>
       <StackPane prefHeight="150.0" prefWidth="200.0">
          <children>
@@ -17,6 +18,11 @@
                   <Font name="System Bold Italic" size="28.0" />
                </font>
             </Text>
+         </children>
+      </StackPane>
+      <StackPane prefHeight="70.0" prefWidth="614.0">
+         <children>
+            <TextField fx:id="rechercheField" promptText="Rechercher une discussion" />
          </children>
       </StackPane>
       <StackPane prefHeight="215.0" prefWidth="588.0">
