--- a/src/main/resources/Message.fxml
+++ b/src/main/resources/Message.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.image.ImageView?>
-<VBox prefHeight="481.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MessageController">
+<VBox styleClass="backg" prefHeight="481.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MessageController">
    <ButtonBar prefHeight="40.0" prefWidth="200.0">
       <buttons>
          <Button mnemonicParsing="false" onAction="#retour" text="Retour" />
