--- a/src/main/resources/Calendrier.fxml
+++ b/src/main/resources/Calendrier.fxml
@@ -3,15 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CalendrierController">
+<AnchorPane prefHeight="594.0" prefWidth="790.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CalendrierController">
     <children>
-        <FlowPane fx:id="calendar" hgap="10.0" layoutX="14.0" layoutY="116.0" prefHeight="498.0" prefWidth="716.0" vgap="5.0" />
+        <GridPane fx:id="calendar" hgap="10.0" layoutX="36.0" layoutY="119.0" prefHeight="525.0" prefWidth="859.0" vgap="5.0">
+            <!-- Here you can dynamically add Text nodes for dates and days -->
+        </GridPane>
         <HBox alignment="CENTER" layoutX="163.0" layoutY="14.0" prefHeight="44.0" prefWidth="419.0" spacing="5.0">
             <children>
                 <Button mnemonicParsing="false" onAction="#backOneMonth" text="&lt;" />
