--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
     <children>
@@ -21,15 +24,37 @@
         <Button fx:id="boutonGererVoitures" layoutX="46.0" layoutY="97.0" mnemonicParsing="false" onAction="#ouvrirAffichervoiture" opacity="0.0" prefHeight="44.0" prefWidth="129.0" text="Gérer les voitures" />
 
         <!-- Liste des parkings -->
-        <ListView fx:id="listeParkings" layoutX="269.0" layoutY="160.0" prefHeight="312.0" prefWidth="458.0" />
+        <ListView fx:id="listeParkings" layoutX="252.0" layoutY="176.0" prefHeight="272.0" prefWidth="258.0" />
 
         <!-- Zone de recherche -->
-        <TextField fx:id="searchField" layoutX="435.0" layoutY="119.0" promptText="Rechercher..." />
+        <TextField fx:id="searchField" layoutX="252.0" layoutY="141.0" promptText="Rechercher..." />
 
-        <Button fx:id="boutonTriCapacite" layoutX="598.0" layoutY="119.0" mnemonicParsing="false" onAction="#trierParCapacite" prefHeight="25.0" prefWidth="129.0" text="Tri Capacité ▲" />
+        <Button fx:id="boutonTriCapacite" layoutX="413.0" layoutY="141.0" mnemonicParsing="false" onAction="#trierParCapacite" prefHeight="25.0" prefWidth="97.0" text="Tri Capacité ▲" />
 
         <!-- Bouton "Ajouter" -->
         <Button fx:id="boutonAjouter" layoutX="269.0" layoutY="492.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Ajouter" />
+        <Label layoutX="567.0" layoutY="228.0" text="Nom:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font></Label>
+        <Label layoutX="555.0" layoutY="280.0" text="Capacité:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font></Label>
+        <Label layoutX="567.0" layoutY="334.0" text="Type:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font></Label>
+        <Label layoutX="520.0" layoutY="389.0" prefHeight="20.0" prefWidth="129.0" text="Nombre Actuelles:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font></Label>
+        <TextField fx:id="textFieldNom" layoutX="655.0" layoutY="226.0" prefHeight="25.0" prefWidth="89.0" />
+        <TextField fx:id="textFieldCapacite" layoutX="655.0" layoutY="278.0" prefHeight="25.0" prefWidth="89.0" />
+        <ComboBox fx:id="comboBoxType" layoutX="655.0" layoutY="332.0" prefHeight="25.0" prefWidth="89.0" />
+        <TextField fx:id="textFieldNombreActuelles" layoutX="655.0" layoutY="387.0" prefHeight="25.0" prefWidth="89.0" />
+        <Button fx:id="boutonModifier" layoutX="540.0" layoutY="492.0" onAction="#modifierParking" prefHeight="25.0" prefWidth="89.0" text="Modifier" />
+        <Button fx:id="boutonSupprimer" layoutX="655.0" layoutY="492.0" onAction="#supprimerParking" prefHeight="25.0" prefWidth="89.0" text="Supprimer" />
 
         <!-- Margeur pour HBox -->
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
