--- a/src/main/resources/AfficherVoitureAdmin.fxml
+++ b/src/main/resources/AfficherVoitureAdmin.fxml
@@ -1,25 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoitureAdmin">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0">
+        <ImageView fitHeight="600.0" fitWidth="800.0" layoutX="-13.0" layoutY="-1.0">
             <image>
                 <Image url="@image/ListeVoiture.png" />
             </image>
         </ImageView>
-        <Button fx:id="boutonGererParking" layoutX="46.0" layoutY="160.0" mnemonicParsing="false" onAction="#ouvrirAfficherParkingAdmin" opacity="0.0" prefHeight="49.0" prefWidth="142.0" text="Gérer Parking" />
+        <Button fx:id="boutonGererParking" layoutX="27.0" layoutY="161.0" mnemonicParsing="false" onAction="#ouvrirAfficherParkingAdmin" opacity="0.0" prefHeight="49.0" prefWidth="142.0" text="Gérer Parking" />
 
         <!-- Ajoutez une ListView pour afficher la liste des voitures -->
-        <ListView fx:id="listeVoitures" layoutX="291.0" layoutY="166.0" prefHeight="358.0" prefWidth="417.0" />
-        <TextField fx:id="searchField" layoutX="559.0" layoutY="126.0" promptText="Rechercher..." />
+        <ListView fx:id="listeVoitures" layoutX="283.0" layoutY="165.0" prefHeight="256.0" prefWidth="231.0" />
+        <TextField fx:id="searchField" layoutX="283.0" layoutY="133.0" promptText="Rechercher..." />
+        <TextField fx:id="textFieldMarque" layoutX="605.0" layoutY="185.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="textFieldModele" layoutX="605.0" layoutY="234.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="textFieldCouleur" layoutX="605.0" layoutY="275.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="textFieldMatricule" layoutX="605.0" layoutY="315.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Button layoutX="652.0" layoutY="376.0" onAction="#modifierVoiture" prefHeight="25.0" prefWidth="72.0" text="Modifier" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Button fx:id="boutonSupprimer" layoutX="539.0" layoutY="376.0" mnemonicParsing="false" onAction="#supprimerVoiture" text="Supprimer" />
+        <Label layoutX="530.0" layoutY="236.0" text="Modèle:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font>
+        </Label>
+        <Label layoutX="529.0" layoutY="277.0" text="Couleur:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font>
+        </Label>
+        <Label layoutX="527.0" layoutY="317.0" text="Matricule:" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="14.0" />
+            </font>
+        </Label>
+      <Label layoutX="530.0" layoutY="188.0" text="Marque:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+
+
 
     </children>
 </AnchorPane>
