--- a/src/main/resources/AfficherEvent.fxml
+++ b/src/main/resources/AfficherEvent.fxml
@@ -4,7 +4,9 @@
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,17 +15,16 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEvent">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0">
+        <ImageView fitHeight="608.0" fitWidth="869.0" layoutX="-11.0">
             <image>
                 <Image url="@image/ListeEvent.png" /> <!-- Assurez-vous d'avoir l'image correcte et le chemin correct -->
             </image>
         </ImageView>
-        <ListView fx:id="listeEvents" layoutX="274.0" layoutY="168.0" prefHeight="320.0" prefWidth="459.0" />
-        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" /> <!-- Vous pouvez ajouter d'autres éléments ici si nécessaire -->
-        <Button fx:id="boutonGerer" blendMode="HARD_LIGHT" layoutX="288.0" layoutY="501.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="147.0" text="Gerer les évènements" />
-        <Button fx:id="boutonGererEspace" layoutX="59.0" layoutY="103.0" mnemonicParsing="false" onAction="#ouvrirAjouterEspace" opacity="0.0" prefHeight="35.0" prefWidth="110.0" text="Gerer les espaces " />
-        <TextField fx:id="txtRechercheNom" layoutX="598.0" layoutY="120.0" prefHeight="26.0" prefWidth="129.0" promptText="Rechercher un event" />
-        <ChoiceBox fx:id="triChoiceBox" layoutX="274.0" layoutY="120.0" prefHeight="26.0" prefWidth="103.0">
+        <ListView fx:id="listeEvents" layoutX="271.0" layoutY="147.0" prefHeight="274.0" prefWidth="341.0" />
+        <HBox layoutX="498.0" layoutY="418.0" spacing="20.0" />
+        <Button fx:id="boutonGererEspace" layoutX="37.0" layoutY="103.0" mnemonicParsing="false" onAction="#ouvrirAjouterEspace" opacity="0.0" prefHeight="46.0" prefWidth="144.0" text="Gerer les espaces " />
+        <TextField fx:id="txtRechercheNom" layoutX="483.0" layoutY="113.0" prefHeight="26.0" prefWidth="129.0" promptText="Rechercher un event" />
+        <ChoiceBox fx:id="triChoiceBox" layoutX="271.0" layoutY="113.0" prefHeight="26.0" prefWidth="103.0">
             <items>
                 <FXCollections fx:factory="observableArrayList">
                     <String fx:value="Nom" />
@@ -31,6 +32,12 @@
                 </FXCollections>
             </items>
         </ChoiceBox>
-
+        <TextField fx:id="textFieldTitre" layoutX="646.0" layoutY="146.0" prefHeight="26.0" prefWidth="106.0" promptText="Titre" />
+        <TextField fx:id="textFieldNbrPersonne" layoutX="646.0" layoutY="196.0" prefHeight="26.0" prefWidth="106.0" promptText="Nombre de Personnes:" />
+        <ComboBox fx:id="comboBoxEspace" blendMode="SOFT_LIGHT" layoutX="646.0" layoutY="284.0" prefHeight="26.0" prefWidth="106.0" promptText="Espace" />
+        <Button fx:id="boutonModifier" blendMode="HARD_LIGHT" layoutX="281.0" layoutY="452.0" onAction="#modifierEvent" prefHeight="26.0" prefWidth="82.0" text="Modifier" />
+        <Button fx:id="boutonSupprimer" blendMode="HARD_LIGHT" layoutX="400.0" layoutY="452.0" onAction="#supprimerEvent" prefHeight="26.0" prefWidth="82.0" text="Supprimer" />
+        <TextField fx:id="textFieldDate" layoutX="646.0" layoutY="240.0" prefHeight="26.0" prefWidth="106.0" promptText="Date" />
+        <TextArea fx:id="textFieldListeInvites" layoutX="646.0" layoutY="328.0" prefHeight="106.0" prefWidth="159.0" promptText="Liste Invités:" />
     </children>
 </AnchorPane>
