--- a/src/main/resources/AjouterReclamation.fxml
+++ b/src/main/resources/AjouterReclamation.fxml
@@ -5,31 +5,28 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="544.0" prefWidth="864.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controllers.AjouterReclamation">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<AnchorPane prefHeight="561.0" prefWidth="805.0" styleClass="back" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controllers.AjouterReclamation">
     <children>
-        <TextField fx:id="descriRecTF" layoutX="46.0" layoutY="343.0" prefHeight="109.0" prefWidth="231.0" />
-        <TextField fx:id="CategorieRecTF" layoutX="46.0" layoutY="272.0" prefHeight="26.0" prefWidth="231.0" />
-        <Button fx:id="ajouter" layoutX="294.0" layoutY="472.0" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
-        <Pane layoutX="358.0" prefHeight="544.0" prefWidth="511.0">
+        <VBox alignment="CENTER" spacing="10" prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <TableView fx:id="TableViewRec" layoutX="20.0" layoutY="14.0" prefHeight="304.0" prefWidth="444.0">
-                    <columns>
-                        <TableColumn fx:id="CvDescri" prefWidth="151.20004272460938" text="Description" />
-                        <TableColumn fx:id="CvDate" prefWidth="95.199951171875" text="Date" />
-                        <TableColumn fx:id="CvCat" prefWidth="99.2000732421875" text="Categorie" />
-                        <TableColumn fx:id="CvStatut" minWidth="5.60009765625" prefWidth="124.7999267578125" text="Statut" />
-                    </columns>
-                </TableView>
+                <Label text="Ajouter Reclamation" />
+                <HBox spacing="10" alignment="CENTER">
+                    <Label text="Catégorie:" />
+                    <TextField fx:id="CategorieRecTF" />
+                </HBox>
+                <HBox spacing="10" alignment="CENTER">
+                    <Label text="Description:" />
+                    <TextField fx:id="descriRecTF" />
+                </HBox>
+                <Button text="Ajouter" onAction="#ajouter" />
             </children>
-        </Pane>
-        <Button fx:id="modifier" layoutX="294.0" layoutY="272.0" mnemonicParsing="false" onAction="#modifier" text="Modifier" />
-        <Button fx:id="supprimer" layoutX="46.0" layoutY="472.0" mnemonicParsing="false" onAction="#supprimer" text="Supprimer" />
-        <Button fx:id="buttonAjouterReponse" text="Ajouter Réponse" onAction="#goToAjouterReponse" />
-
-        <Label fx:id="cate" layoutX="46.0" layoutY="246.0" prefHeight="18.0" prefWidth="98.0" text="Categorie :" />
-        <Label fx:id="desc" layoutX="46.0" layoutY="315.0" text="Description :" />
+        </VBox>
     </children>
 </AnchorPane>
