--- a/src/main/resources/AjouterReponse.fxml
+++ b/src/main/resources/AjouterReponse.fxml
@@ -5,27 +5,22 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="573.0" prefWidth="485.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controllers.AjouterReponse">
+<?import javafx.scene.text.Text?>
+<AnchorPane prefHeight="471.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controllers.AjouterReponse">
     <children>
-        <VBox layoutX="20" layoutY="20" spacing="10">
-            <Label text="Commentaire:" />
-            <TextField fx:id="comTF" />
-
-            <TableView fx:id="TableViewComA">
-                <columns>
-                    <TableColumn fx:id="CvNomA" prefWidth="115.2" text="Nom admin" />
-                    <TableColumn fx:id="CvCom" prefWidth="132.0" text="Commentaire" />
-                </columns>
-            </TableView>
-            <HBox spacing="10">
-                <Button fx:id="ajouter" onAction="#ajouter" text="Ajouter" />
-                <Button fx:id="modifier" onAction="#modifier" text="Modifier" />
-                <Button fx:id="supprimer" onAction="#supprimer" text="Supprimer" />
-            </HBox>
-        </VBox>
+      <ImageView fitHeight="586.0" fitWidth="667.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@ListeVoiture.png" />
+         </image>
+      </ImageView>
+        <Text layoutX="20.0" layoutY="20.0" text="Ajouter une réponse" />
+        <TextField fx:id="comTF" layoutX="20.0" layoutY="50.0" prefWidth="200.0" />
+        <Button layoutX="230.0" layoutY="50.0" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
     </children>
 </AnchorPane>
