--- a/src/main/resources/EventAjoutes.fxml
+++ b/src/main/resources/EventAjoutes.fxml
@@ -1,39 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
-<?import javafx.scene.control.ComboBox?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.EventAjoutes"
-            prefHeight="400.0" prefWidth="600.0">
-
-    <ListView fx:id="listeEvents" layoutX="28.0" layoutY="27.0" prefHeight="346.0" prefWidth="200.0"/>
-
-    <TextField fx:id="textFieldTitre" layoutX="250.0" layoutY="27.0" prefWidth="200.0" />
-    <TextField fx:id="textFieldNbrPersonne" layoutX="250.0" layoutY="67.0" prefWidth="200.0" />
-    <ComboBox fx:id="comboBoxEspace" layoutX="250.0" layoutY="107.0" prefWidth="200.0"/>
-    <TextArea fx:id="textFieldListeInvites" layoutX="250.0" layoutY="147.0" prefHeight="100.0" prefWidth="200.0" />
-    <TextField fx:id="textFieldDate" layoutX="250.0" layoutY="257.0" prefWidth="200.0" />
-
-    <Button fx:id="boutonGererEspace" layoutX="28.0" layoutY="380.0" text="Gérer l'espace"/>
-
-    <ChoiceBox fx:id="triChoiceBox" layoutX="250.0" layoutY="380.0">
-        <items>
-            <FXCollections fx:factory="observableArrayList">
-                <String fx:value="Nom" />
-                <String fx:value="Date" />
-            </FXCollections>
-        </items>
-    </ChoiceBox>
-
-    <TextField fx:id="txtRechercheNom" layoutX="450.0" layoutY="380.0" prefWidth="150.0" />
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EventAjoutes">
+    <children>
+        <ListView fx:id="listViewEvents" layoutX="180.0" layoutY="109.0" onMouseClicked="#afficherDetailsEvent" prefHeight="200.0" prefWidth="240.0" />
+        <Label layoutX="261.0" layoutY="68.0" text="Liste des événements ajoutés" />
+    </children>
 </AnchorPane>
