--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -27,6 +27,8 @@
         <TextField fx:id="matriculeField" layoutX="326.0" layoutY="408.0" promptText="Matricule" />
         <Button fx:id="telechargerButton" layoutX="710.0" layoutY="639.0" onAction="#handleTelechargerButton" prefHeight="50.0" prefWidth="192.0" text="Télécharger QR Code" visible="false" />
         <Button fx:id="consulterVoituresButton" layoutX="350.0" layoutY="639.0" mnemonicParsing="false" onAction="#handleConsulterButton" prefHeight="50.0" prefWidth="192.0" text="Consulter Voitures" />
+        <Label layoutX="46.0" layoutY="581.0" text="Places disponibles :" />
+        <Label fx:id="placesDispoLabel" layoutX="153.0" layoutY="558.0" prefHeight="40.0" prefWidth="65.0" />
 
         <Button fx:id="ajouterButton" layoutX="97.0" layoutY="639.0" onAction="#handleAjouterButton" prefHeight="50.0" prefWidth="192.0" text="Ajouter" />
         <ProgressBar fx:id="progressBar" layoutX="97.0" layoutY="610.0" prefHeight="18.0" prefWidth="443.0" />
@@ -60,15 +62,17 @@
         <VBox alignment="CENTER" spacing="10">
             <HBox alignment="CENTER" spacing="10" />
         </VBox>
-      <Label layoutX="92.0" layoutY="455.0" prefHeight="30.0" prefWidth="149.0" text="Type :" textFill="#153f6f">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="92.0" layoutY="535.0" prefHeight="30.0" prefWidth="149.0" text="Nom Parking :" textFill="#153f6f">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Label>
+        <Label layoutX="92.0" layoutY="455.0" prefHeight="30.0" prefWidth="149.0" text="Type :" textFill="#153f6f">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </Label>
+        <Label layoutX="92.0" layoutY="535.0" prefHeight="30.0" prefWidth="149.0" text="Nom Parking :" textFill="#153f6f">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+        </Label>
+
+
     </children>
 </AnchorPane>
