--- a/src/main/resources/stats.fxml
+++ b/src/main/resources/stats.fxml
@@ -8,12 +8,19 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="535.0" prefWidth="802.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StatisticsController">
+<AnchorPane prefHeight="592.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StatisticsController">
+   <ImageView fitHeight="709.0" fitWidth="1051.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@image/bg.png" />
+      </image>
+   </ImageView>
     <!-- Header -->
-    <Label blendMode="HARD_LIGHT" layoutX="251.0" layoutY="14.0" prefHeight="27.0" prefWidth="238.0" text="Statistiques des espaces">
+    <Label blendMode="HARD_LIGHT" layoutX="381.0" layoutY="50.0" prefHeight="27.0" prefWidth="238.0" text="Statistiques des espaces">
         <font>
             <Font name="System Bold Italic" size="18.0" />
         </font>
@@ -21,7 +28,7 @@
 
     <!-- Bar Chart -->
 
-    <BarChart fx:id="barChart" layoutX="14.0" layoutY="53.0" prefHeight="200.0" prefWidth="711.0">
+    <BarChart fx:id="barChart" layoutX="195.0" layoutY="88.0" prefHeight="200.0" prefWidth="734.0">
         <xAxis>
             <CategoryAxis fx:id="monthAxis" label="Espace" side="BOTTOM" />
         </xAxis>
@@ -32,10 +39,10 @@
 
 
     <!-- Pie Chart -->
-    <PieChart fx:id="pieChart" layoutX="413.0" layoutY="237.0" prefHeight="286.0" prefWidth="318.0" />
+    <PieChart fx:id="pieChart" layoutX="460.0" layoutY="296.0" prefHeight="286.0" prefWidth="318.0" />
 
     <!-- Table View -->
-    <TableView fx:id="tableView" layoutX="86.0" layoutY="285.0" prefHeight="190.0" prefWidth="200.0">
+    <TableView fx:id="tableView" layoutX="83.0" layoutY="317.0" prefHeight="190.0" prefWidth="200.0">
         <!-- Define columns -->
         <columns>
             <TableColumn fx:id="spaceColumn" prefWidth="196.80003356933594" text="Espace">
