--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -55,6 +55,7 @@
         <TextField fx:id="textFieldNombreActuelles" layoutX="743.0" layoutY="485.0" prefHeight="52.0" prefWidth="181.0" />
         <Button fx:id="boutonModifier" layoutX="580.0" layoutY="624.0" onAction="#modifierParking" prefHeight="34.0" prefWidth="121.0" text="Modifier" />
         <Button fx:id="boutonSupprimer" layoutX="773.0" layoutY="624.0" onAction="#supprimerParking" prefHeight="34.0" prefWidth="121.0" text="Supprimer" />
+        <Button fx:id="retourButton" layoutX="845.0" layoutY="45.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="57.0" prefWidth="157.0" text="Retour vers l'accueil" />
 
         <!-- Margeur pour HBox -->
         <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
