--- a/src/main/resources/AfficherVoitureAdmin.fxml
+++ b/src/main/resources/AfficherVoitureAdmin.fxml
@@ -28,6 +28,8 @@
         <TextField fx:id="textFieldMatricule" layoutX="774.0" layoutY="510.0" prefHeight="42.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Button layoutX="567.0" layoutY="610.0" onAction="#modifierVoiture" prefHeight="42.0" prefWidth="156.0" text="Modifier" GridPane.columnIndex="0" GridPane.rowIndex="4" />
         <Button fx:id="boutonSupprimer" layoutX="741.0" layoutY="610.0" mnemonicParsing="false" onAction="#supprimerVoiture" prefHeight="42.0" prefWidth="156.0" text="Supprimer" />
+        <Button fx:id="retourButton" layoutX="845.0" layoutY="45.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="57.0" prefWidth="157.0" text="Retour vers l'accueil" />
+
         <Label layoutX="559.0" layoutY="383.0" text="Modèle:" textFill="#153f6f">
             <font>
                 <Font name="System Bold" size="20.0" />
