--- a/src/main/resources/add.fxml
+++ b/src/main/resources/add.fxml
@@ -12,54 +12,54 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddUser">
+<AnchorPane prefHeight="586.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddUser">
     <children>
-      <ImageView fitHeight="586.0" fitWidth="699.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="750.0" fitWidth="1051.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/interface.png" />
+            <Image url="@image/admin2.png" />
          </image>
       </ImageView>
-        <Label layoutX="300.0" layoutY="95.0" text="Nom:" textFill="#f8f8f8" GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <Label layoutX="519.0" layoutY="121.0" text="Nom:" GridPane.columnIndex="0" GridPane.rowIndex="0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-        <TextField fx:id="nomField" layoutX="396.0" layoutY="93.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="nomField" layoutX="654.0" layoutY="119.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-        <Label layoutX="292.0" layoutY="133.0" text="Prenom:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <Label layoutX="510.0" layoutY="195.0" text="Prenom:" textFill="#0a0000" GridPane.columnIndex="0" GridPane.rowIndex="1">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-        <TextField fx:id="prenomField" layoutX="396.0" layoutY="131.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="prenomField" layoutX="654.0" layoutY="192.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label layoutX="300.0" layoutY="176.0" text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+        <Label layoutX="518.0" layoutY="263.0" prefWidth="40.0" text="Email:" textFill="#110000" GridPane.columnIndex="0" GridPane.rowIndex="2">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-        <TextField fx:id="emailField" layoutX="396.0" layoutY="174.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="emailField" layoutX="654.0" layoutY="260.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label layoutX="288.0" layoutY="212.0" prefHeight="33.0" prefWidth="79.0" text="Password:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+        <Label layoutX="499.0" layoutY="334.0" prefHeight="33.0" prefWidth="79.0" text="Password:" textFill="#110000" GridPane.columnIndex="0" GridPane.rowIndex="3">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-        <PasswordField fx:id="passwordField" layoutX="396.0" layoutY="216.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <PasswordField fx:id="passwordField" layoutX="654.0" layoutY="338.0" prefHeight="25.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-        <Label layoutX="273.0" layoutY="261.0" text="Phone Number:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+        <Label layoutX="487.0" layoutY="419.0" text="Phone Number:" GridPane.columnIndex="0" GridPane.rowIndex="4">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-        <TextField fx:id="phoneField" layoutX="396.0" layoutY="259.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <TextField fx:id="phoneField" layoutX="654.0" layoutY="416.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-        <Label layoutX="301.0" layoutY="306.0" text="Role:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
+        <Label layoutX="521.0" layoutY="499.0" text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="5">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-        <ChoiceBox fx:id="roleChoiceBox" layoutX="446.0" layoutY="304.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+        <ChoiceBox fx:id="roleChoiceBox" layoutX="704.0" layoutY="496.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
         </ChoiceBox>
 
         <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-          <Button layoutX="496.0" layoutY="403.0" onAction="#handleShowcaseUserButtonClick" text="Show Users" />
-          <Button layoutX="293.0" layoutY="403.0" onAction="#handleAddUserButtonClick" text="Add User" />
+          <Button layoutX="35.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleShowcaseUserButtonClick" opacity="0.0" prefHeight="33.0" prefWidth="260.0" text="Show Users" />
+          <Button layoutX="622.0" layoutY="540.0" onAction="#handleAddUserButtonClick" text="Add User" />
 
     </children>
 </AnchorPane>
