--- a/src/main/resources/addr.fxml
+++ b/src/main/resources/addr.fxml
@@ -12,48 +12,46 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddRes">
+<AnchorPane prefHeight="586.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddRes">
     <children>
-        <ImageView fitHeight="586.0" fitWidth="699.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="750.0" fitWidth="1051.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@image/interface.png" />
+                <Image url="@image/20.png" />
             </image>
         </ImageView>
-        <Label layoutX="300.0" layoutY="95.0" text="Nom:" textFill="#f8f8f8" GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <Label layoutX="428.0" layoutY="122.0" text="Nom:" GridPane.columnIndex="0" GridPane.rowIndex="0">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <TextField fx:id="nomField" layoutX="396.0" layoutY="93.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="nomField" layoutX="563.0" layoutY="120.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-        <Label layoutX="292.0" layoutY="133.0" text="Prenom:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <Label layoutX="419.0" layoutY="196.0" text="Prenom:" textFill="#0a0000" GridPane.columnIndex="0" GridPane.rowIndex="1">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <TextField fx:id="prenomField" layoutX="396.0" layoutY="131.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="prenomField" layoutX="563.0" layoutY="193.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label layoutX="300.0" layoutY="176.0" text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+        <Label layoutX="427.0" layoutY="264.0" prefWidth="40.0" text="Email:" textFill="#110000" GridPane.columnIndex="0" GridPane.rowIndex="2">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <TextField fx:id="emailField" layoutX="396.0" layoutY="174.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="emailField" layoutX="563.0" layoutY="261.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label layoutX="288.0" layoutY="212.0" prefHeight="33.0" prefWidth="79.0" text="Password:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+        <Label layoutX="408.0" layoutY="335.0" prefHeight="33.0" prefWidth="79.0" text="Password:" textFill="#110000" GridPane.columnIndex="0" GridPane.rowIndex="3">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <PasswordField fx:id="passwordField" layoutX="396.0" layoutY="216.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <PasswordField fx:id="passwordField" layoutX="563.0" layoutY="339.0" prefHeight="25.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-        <Label layoutX="273.0" layoutY="261.0" text="Phone Number:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+        <Label layoutX="396.0" layoutY="420.0" text="Phone Number:" GridPane.columnIndex="0" GridPane.rowIndex="4">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <TextField fx:id="phoneField" layoutX="396.0" layoutY="259.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-
-        <ChoiceBox fx:id="roleChoiceBox" layoutX="446.0" layoutY="304.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+        <TextField fx:id="phoneField" layoutX="563.0" layoutY="417.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <ChoiceBox fx:id="roleChoiceBox" layoutX="613.0" layoutY="496.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
         </ChoiceBox>
-
         <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+        <Button layoutX="531.0" layoutY="541.0" onAction="#handleAddUserButtonClick" text="REGISTER" />
 
-        <Button layoutX="293.0" layoutY="403.0" onAction="#handleAddUserButtonClick" text="Add User" />
     </children>
 </AnchorPane>
