--- a/src/main/resources/AjouterReponse.fxml
+++ b/src/main/resources/AjouterReponse.fxml
@@ -2,16 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="471.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controllers.AjouterReponse">
     <children>
       <ImageView fitHeight="586.0" fitWidth="667.0" pickOnBounds="true" preserveRatio="true">
@@ -19,8 +15,16 @@
             <Image url="@ListeVoiture.png" />
          </image>
       </ImageView>
-        <Text layoutX="20.0" layoutY="20.0" text="Ajouter une réponse" />
-        <TextField fx:id="comTF" layoutX="20.0" layoutY="50.0" prefWidth="200.0" />
-        <Button layoutX="230.0" layoutY="50.0" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
     </children>
+
+    <children>
+        <Label layoutX="338.0" layoutY="43.0" text="Add Response" />
+        <Label layoutX="238.0" layoutY="88.0" text="Response Content:" />
+        <TextField fx:id="comTF" layoutX="340.0" layoutY="84.0" prefHeight="25.0" prefWidth="185.0" />
+        <Button fx:id="ajouterButton" layoutX="541.0" layoutY="84.0" mnemonicParsing="false" onAction="#ajouter" text="Add" />
+        <ListView fx:id="listViewReponses" layoutX="267.0" layoutY="114.0" prefHeight="272.0" prefWidth="319.0" />
+        <Button fx:id="modifier" layoutX="338.0" layoutY="402.0" mnemonicParsing="false" onAction="#modifier" text="Modify" />
+        <Button fx:id="supprimer" layoutX="457.0" layoutY="402.0" mnemonicParsing="false" onAction="#supprimer" text="Delete" />
+    </children>
+
 </AnchorPane>
