--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -14,24 +14,26 @@
    <children>
       <ImageView fitHeight="750.0" fitWidth="1051.0">
          <image>
-            <Image url="@image/Login.png" />
+            <Image url="@image/cap1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="19.0" fitWidth="28.0" layoutX="652.0" layoutY="397.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="19.0" fitWidth="18.0" layoutX="679.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/eye-clipart-transparent.png" />
          </image>
       </ImageView>
-      <Label layoutX="371.0" layoutY="334.0" prefHeight="17.0" prefWidth="60.0" text="Email" />
-      <Label layoutX="371.0" layoutY="397.0" prefHeight="18.0" prefWidth="90.0" text="Mot de passe" />
-      <TextField fx:id="emailfield" layoutX="476.0" layoutY="325.0" prefHeight="36.0" prefWidth="156.0" />
-      <PasswordField fx:id="passwordfield" layoutX="476.0" layoutY="388.0" prefHeight="36.0" prefWidth="156.0" />
-      <Button fx:id="loginbtn" layoutX="447.0" layoutY="500.0" mnemonicParsing="false" onAction="#loginbtnonaction" opacity="0.0" prefHeight="54.0" prefWidth="191.0" text="login" />
-      <Button fx:id="cancelbtn" layoutX="502.0" layoutY="651.0" mnemonicParsing="false" onAction="#cancelbtnonaction" prefHeight="25.0" prefWidth="82.0" text="Annuler" />
-      <ToggleButton fx:id="toggleButton" layoutX="647.0" layoutY="393.0" mnemonicParsing="false" onAction="#toggleButton" opacity="0.0" prefHeight="26.0" prefWidth="28.0" text="Show" />
-      <Label fx:id="ShownPassword" layoutX="507.0" layoutY="430.0" text="shown password" />
-      <Hyperlink fx:id="signup" layoutX="526.0" layoutY="568.0" onAction="#handlesignup" prefHeight="23.0" prefWidth="61.0" text="sign-up" />
-      <Hyperlink layoutX="144.0" layoutY="492.0" onAction="#OnForget" onDragDetected="#opt" text="mot_de_passe oublié" />
+      <Label layoutX="373.0" layoutY="194.0" prefHeight="40.0" prefWidth="88.0" text="Email" />
+      <Label layoutX="362.0" layoutY="262.0" prefHeight="40.0" prefWidth="111.0" text="Mot de passe" />
+      <TextField fx:id="emailfield" layoutX="448.0" layoutY="187.0" prefHeight="54.0" prefWidth="223.0" />
+      <PasswordField fx:id="passwordfield" layoutX="448.0" layoutY="262.0" prefHeight="40.0" prefWidth="223.0" />
+      <Button fx:id="loginbtn" layoutX="447.0" layoutY="546.0" mnemonicParsing="false" onAction="#loginbtnonaction" opacity="0.0" prefHeight="54.0" prefWidth="191.0" text="login" />
+      <Button fx:id="cancelbtn" layoutX="501.0" layoutY="711.0" mnemonicParsing="false" onAction="#cancelbtnonaction" prefHeight="25.0" prefWidth="82.0" text="Annuler" />
+      <ToggleButton fx:id="toggleButton" layoutX="674.0" layoutY="269.0" mnemonicParsing="false" onAction="#toggleButton" opacity="0.0" prefHeight="26.0" prefWidth="28.0" text="Show" />
+      <Label fx:id="ShownPassword" layoutX="505.0" layoutY="322.0" text="shown password" />
+      <Label fx:id="captchaLabel" layoutX="442.0" layoutY="369.0" prefHeight="71.0" prefWidth="223.0" stylesheets="@stylish.css" text="" textFill="WHITE" />
+      <TextField fx:id="captchaInput" layoutX="478.0" layoutY="454.0" prefHeight="40.0" prefWidth="142.0" promptText="Enter CAPTCHA" />
+      <ToggleButton fx:id="signup" layoutX="456.0" layoutY="639.0" mnemonicParsing="false" onAction="#handlesignup" opacity="0.0" prefHeight="54.0" prefWidth="171.0" text="sign-up" />
+      <Hyperlink layoutX="492.0" layoutY="506.0" onAction="#OnForget" onDragDetected="#opt" text="forgot password?" />
 
    </children>
 </AnchorPane>
