--- a/src/main/resources/showcaseUser.fxml
+++ b/src/main/resources/showcaseUser.fxml
@@ -25,6 +25,7 @@
         <TextField fx:id="txtRechercheNom" layoutX="701.0" layoutY="175.0" prefHeight="26.0" prefWidth="147.0" promptText="Rechercher par nom" />
         <Button layoutX="852.0" layoutY="176.0" prefHeight="26.0" prefWidth="80.0" text="Rechercher" />
         <Button layoutX="526.0" layoutY="176.0" prefHeight="26.0" prefWidth="115.0" text="Trier par role" />
+        <Button layoutX="35.0" layoutY="184.0" mnemonicParsing="false" onAction="#yarjaaliladd" opacity="0.0" prefHeight="33.0" prefWidth="260.0" text="Show Users" />
 
     </children>
 </AnchorPane>
